<?xml version="1.0"?>
<package>
  <name>m3dunit_base</name>
  <version>0.0.0</version>
  <description>The m3d_driver package</description>

  <maintainer email="michalpelka@gmail.com">Michal Pelka</maintainer>



  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>m3d_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>m3d_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
